# HR_assistant_07

./: README.md  pyproject.toml
data/chromadb/: chroma.sqlite3
hr_assistant/: __init__.py  config.py  database.py  document_processor.py  semantic_chunking.py
resumes/: cv_1.txt  cv_10.txt  cv_11.txt  cv_2.txt  cv_3.txt  cv_4.txt  cv_5.txt  cv_6.txt  cv_7.txt  cv_8.txt  cv_9.txt
