[project]
name = "hr-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "“Ivan",email = "“ivanschena@gmail.com”"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14.0"
dependencies = [
    "ollama (>=0.6.2,<0.7.0)",
    "chainlit (>=2.11.1,<3.0.0)",
    "chromadb (>=1.5.9,<2.0.0)",
    "openai (>=2.35.0,<3.0.0)",
    "langchain-openai (>=1.2.1,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "sentence-transformers (>=5.5.0,<6.0.0)",
    "markitdown (>=0.1.5,<0.2.0)"
]

[tool.poetry]
packages = [{include = "hr_assistant", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
